--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
   "bugs": {
     "url": "https://github.com/dmitriy9427/express-mesto-gha/issues"
   },
-  "homepage": "https://github.com/dmitriy9427/express-mesto-gha#readme",
+  "homepage": "https://github.com/dmitriy9427/express-mesto-gha/issues#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "celebrate": "^15.0.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.5",
+    "validator": "^13.7.0"
+  },
+  "devDependencies": {
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "express": "^4.18.2",
-    "mongoose": "^6.6.5",
     "nodemon": "^2.0.20"
   }
 }
+
